2004-01-07  Fred Kiefer <FredKiefer@gmx.de>

	Added missing .cvsignore files and extended the existing ones.
	
2003-12-31  Fred Kiefer <FredKiefer@gmx.de>

	* Tools/win32pbs.m New file to handle windows clipboard
	interaction.
	* Tools/GNUmakefile
	Compile new file for windows backend.
	* Tools/gpbs.m (PasteboardServer -init) for windows backends use
	Win32PbOwner as the pasteboard owner class.	
	
2003-12-30  Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/path.m (-GSSendBezierPath:) preset the count
	variable, as this is expected by the method [NSBezierPath
	getLineDash:count:phase:]. 
	* Source/xlib/XGGState.m (-_doPath::draw:) allways set fill rule
	for path_fill.

2003-12-30  Fred Kiefer <FredKiefer@gmx.de>

	* Source/art/path.m (-DPSrectstroke::::,
	-_axis_rectangle::::vpath:axis::::pixel:): Adopted to change in 
	NSAffineTransform.h. 

2003-12-28  Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m (initWithAttributes:): Adjusted
	spelling of useWMTaskBar to header, to get it compile.

2003-12-26  Adam Fedor  <fedor@gnu.org>

	* Focus fixes.
	* Headers/win32/WIN32Server.h: Add flags ivar
	* Source/win32/WIN32Server.m (orderwindow:::): If useWMTaskBar
	flag set, don't show app icon and don't order out menu window.
	* Source/win32/WIN32ServerEvent.m (windowEventProc:::): 
	On activation message, activate app, on deactivation message,
	deactivate app (if message comes from menu window).

2003-12-25  Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m (-_initWin32Context) set a default
	cursor, which is used each time the window is entered.

2003-12-23  Fred Kiefer <FredKiefer@gmx.de>

	* Source/winlib/WIN32GState.m (-copyBits:fromRect:toPoint:): Made
	save against self and source being the same object and corrected
	computation for flipped views. This code is copied over from xlib.
	* Source/winlib/WIN32FontEnumerator.m Reimplemented the whole file.
	* Source/winlib/WIN32FontInfo.m (-setupAttributes) assign font